--- a/css/gallery.css
+++ b/css/gallery.css
@@ -110,3 +110,10 @@
         list-style: none;
         padding: 5px;
     }
+
+	footer {
+		position: relative;
+		top: 612px;
+		text-align: center;
+		color: white;
+	}
