--- a/css/main.css
+++ b/css/main.css
@@ -393,3 +393,9 @@ textarea {
         list-style: none;
         padding: 5px;
     }
+
+    footer {
+        text-align: center;
+        margin-top: -12px;
+        color: white;
+    }
