--- a/css/rating.css
+++ b/css/rating.css
@@ -2,3 +2,13 @@
    content: "\2605";
    position: absolute;
 }
+
+.rating {
+  unicode-bidi: bidi-override;
+  direction: rtl;
+}
+.rating > span:hover:before,
+.rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+}
