--- a/css/about.css
+++ b/css/about.css
@@ -44,7 +44,7 @@
     #pre_race {
         height: 300px;
         width: 215px;
-        margin-top: -300px;
+        margin-top: 50px;
         margin-left: -100px;
 		/*position: relative;
 		top: -120px;
@@ -54,7 +54,6 @@
     #biking_5 {
         height: 200px;
         width: 275px;
-        margin-left: -100px;
         margin-top: 100px;
 		/*position: relative;
 		left: -210px;
@@ -65,7 +64,7 @@
         height: 250px;
         width: 250px;
 		position: relative;
-		top: -180px;
+		top: -40px;
 		left: 10px;
     }
 
@@ -91,9 +90,13 @@
 		top: 20px;
 	}
 	#video {
-		position: relative;
+		/*position: relative;*/
 		right: 55px;
 		top: -485px;
+		float: left;
+		display: block;
+		margin-top: 15px;
+		margin-bottom: 15px;
 	}
 
 	#video_credits {
@@ -131,9 +134,9 @@
 	#about_ashley {
         position: relative;
         top: 30px;
-        padding-left: 20px;
+        padding-left: 0px;
 		color: white;
-		text-align: left;
+		text-align: center;
 		margin-top: -12px;
 		font-size: 1.300em;
 	}
@@ -141,8 +144,10 @@
 	#Ashley_NCC {
 		height: 190px;
 		width: 250px;
-		margin-top: -600px;
-		margin-left: 80px;
+		/*margin-left: 80px;*/
+		/*margin-top: -170px;*/
+		display: block;
+		float: right;
 		/*position: relative;
 		left: 550px;
 		top: -390px;*/
@@ -151,8 +156,8 @@
 	#Ash_Chicago {
 		height: 210px;
 		width: 250px;
-		margin-left: 80px;
-		margin-top: -100px;
+		margin-top: -180px;
+		display: block;
 		/*position: relative;
 		left: 1020px;
 		top: -190px;*/
